fix navbar and comets overlapping

--- a/src/css/main.css
+++ b/src/css/main.css
@@ -11,13 +11,13 @@
 @keyframes glowtext { from { text-shadow: 0 0 1px #f6c079; }
   to { text-shadow: 0 0 20px #f6c079; } }
 
-.logo__section { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; height: 100vh; width: auto; margin-left: 10%; margin-right: 10%; position: relative; }
+.logo__section { display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: center; -ms-flex-pack: center; justify-content: center; -webkit-box-align: center; -ms-flex-align: center; align-items: center; height: 100vh; width: auto; margin-left: 20%; margin-right: 20%; position: relative; }
 
 .logo__section .logo__svg { height: 150px; width: auto; -webkit-animation: glowLogoSvg 1s ease-in infinite alternate; animation: glowLogoSvg 1s ease-in infinite alternate; }
 
 .logo__section .logo__text { color: #f6c079; font-family: "Amatic SC", cursive; font-size: 70px; letter-spacing: 5px; -webkit-animation: glowtext 1s ease-in infinite alternate; animation: glowtext 1s ease-in infinite alternate; }
 
-#comets { position: absolute; top: -150px; width: 100%; text-align: left; height: 100%; min-height: 900px; overflow: hidden; z-index: 1; }
+#comets { position: absolute; top: 107px; width: 80%; text-align: left; height: 100%; min-height: 900px; overflow: hidden; z-index: 0; }
 
 #comets i { display: inline-block; width: 250px; height: 150px; position: absolute; border-radius: 5% 40% 70%; -webkit-box-shadow: inset 0px 0px 1px #294b67; box-shadow: inset 0px 0px 1px #294b67; border: 1px solid #333; z-index: 1; background-color: #f6c079; opacity: .7; -webkit-animation: falling 5s 0s infinite; animation: falling 5s 0s infinite; -webkit-animation-timing-function: ease-in; animation-timing-function: ease-in; }
 
@@ -81,7 +81,7 @@
 @keyframes glowLogoSvg { from { -webkit-filter: drop-shadow(0 0 2px #f6c079); filter: drop-shadow(0 0 2px #f6c079); }
   to { -webkit-filter: drop-shadow(0 0 8px #f6c079); filter: drop-shadow(0 0 8px #f6c079); } }
 
-.navbar { position: fixed; top: 0; width: 100%; background: rgba(1, 2, 6, 0.4); padding: 30px; }
+.navbar { position: fixed; top: 0; width: 100%; background: rgba(1, 2, 6, 0.4); padding: 30px; z-index: 1; }
 
 .nav-menu { list-style: none; display: -webkit-box; display: -ms-flexbox; display: flex; -webkit-box-pack: end; -ms-flex-pack: end; justify-content: flex-end; font-family: "Open Sans Condensed", sans-serif; text-transform: uppercase; }
 
